tests/testcases/invalid/semantic/11_break_outside_loop_or_switch.ciel
// Error: 'break' statement not within a loop or switch
int main() {
    break;
    return 0;
}
